Added working links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container-small">
               <div class="header_hero-content">
                 <img
-                  src="./public/assets/img-dhruv.jpg"
+                  src="/assets/img-dhruv.jpg"
                   alt="Dhruv's avatar"
                   class="header_avatar-img"
                 />
@@ -84,13 +84,21 @@
                   <a class="button is-bg-white">
                     Download CV<ion-icon name="download"></ion-icon>
                   </a>
-                  <a class="button is-bg-white is-icon">
+                  <a
+                    class="button is-bg-white is-icon"
+                    href="https://www.linkedin.com/in/suri-dhruv"
+                    target="_blank"
+                  >
                     <ion-icon
                       name="logo-linkedin"
                       class="icon-1x1-small"
                     ></ion-icon>
                   </a>
-                  <a class="button is-bg-white is-icon">
+                  <a
+                    class="button is-bg-white is-icon"
+                    href="https://github.com/dhruvsuri789"
+                    target="_blank"
+                  >
                     <ion-icon name="logo-github"></ion-icon>
                   </a>
                 </div>
@@ -166,7 +174,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-popsicles.png"
+                        src="/assets/img-popsicles.png"
                         alt="Popsicles website image"
                         class="projects_card-img projects_card-img--1"
                       />
@@ -186,7 +194,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-sawyer.jpg"
+                        src="/assets/img-sawyer.jpg"
                         alt="Sawyer Art website"
                         class="projects_card-img projects_card-img--5"
                       />
@@ -209,7 +217,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-stellar.jpg"
+                        src="/assets/img-stellar.jpg"
                         alt="Apple CMS website"
                         class="projects_card-img projects_card-img--6"
                       />
@@ -229,7 +237,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-apple.png"
+                        src="/assets/img-apple.png"
                         alt="Apple CMS website"
                         class="projects_card-img projects_card-img--3"
                       />
@@ -248,7 +256,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-sencha.jpg"
+                        src="/assets/img-sencha.jpg"
                         alt="Sencha Tea website image"
                         class="projects_card-img projects_card-img--2"
                       />
@@ -268,7 +276,7 @@
                         </ul>
                       </div>
                       <img
-                        src="./public/assets/img-ciya.jpg"
+                        src="/assets/img-ciya.jpg"
                         alt="Apple CMS website"
                         class="projects_card-img projects_card-img--4"
                       />
@@ -329,7 +337,7 @@
                     <div class="experience_card-icon">
                       <ion-icon name="brush"></ion-icon>
                     </div>
-                    <div class="experience_card-year">2019 - 20</div>
+                    <div class="experience_card-year">2019 - 21</div>
                     <div class="experience_card-content">
                       <p class="text-weight-semibold">Freelancing</p>
                       <p class="text-color-tertiary">Chandigarh, India</p>
@@ -343,14 +351,14 @@
                     <div class="experience_card-icon">
                       <ion-icon name="browsers"></ion-icon>
                     </div>
-                    <div class="experience_card-year">2021</div>
+                    <div class="experience_card-year">2021 - &#8734;</div>
                     <div class="experience_card-content">
-                      <p class="text-weight-semibold">Skills</p>
+                      <p class="text-weight-semibold">Web Development</p>
                       <p class="text-color-tertiary">Chandigarh, India</p>
                       <p>
                         Gained proficiency in web fundamentals such as HTML,
                         CSS, and JavaScript, alongside using website builders
-                        like Webflow.
+                        like Webflow, Squarespace, Wix etc.
                       </p>
                     </div>
                   </article>
