--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
                       name="arrow-forward-outline"
                     ></ion-icon>
                   </a>
-                  <a class="button is-bg-white">
+                  <a
+                    class="button is-bg-white"
+                    href="/resume-dhruv-suri.pdf"
+                    target="_blank"
+                  >
                     Download CV<ion-icon name="download"></ion-icon>
                   </a>
                   <a
