Added Portfolio image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container-small">
               <div class="header_hero-content">
                 <img
-                  src="/images/img-dhruv.jpg"
+                  src="/images/img-portfolio.jpeg"
                   alt="Dhruv's avatar"
                   class="header_avatar-img"
                 />
@@ -411,7 +411,6 @@
                     placeholder="Your message"
                     required
                     class="form_message"
-                    name="message"
                   ></textarea>
                   <button class="button" type="submit">
                     Submit<ion-icon name="paper-plane"></ion-icon>
