--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     ></ion-icon>
                   </a>
                   <a
-                    class="button is-bg-white is-icon"
+                    class="button is-bg-white is-icon hide"
                     href="https://github.com/dhruvsuri789"
                     target="_blank"
                   >
