--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     <script type="module" src="main.js"></script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-5C9QCPJ2"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="page-wrapper">
       <nav class="nav">
         <div class="padding-global">
