--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google Tag Manager -->
-    <!-- <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-5C9QCPJ2");
-    </script> -->
-    <!-- End Google Tag Manager -->
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dhruv - Portfolio</title>
@@ -38,17 +23,6 @@
     <script type="module" src="main.js"></script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-5C9QCPJ2"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
-
     <div class="page-wrapper">
       <nav class="nav">
         <div class="padding-global">
@@ -339,6 +313,8 @@
                   <li class="skills_item">Figma</li>
                   <li class="skills_item">Adobe XD</li>
                   <li class="skills_item">ChatGPT</li>
+                  <li class="skills_item">Google Tag Manager</li>
+                  <li class="skills_item">Google Analytics</li>
                 </ul>
               </div>
             </div>
