Added new projects

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     ></ion-icon>
                   </a>
                   <a
-                    class="button is-bg-white is-icon hide"
+                    class="button is-bg-white is-icon"
                     href="https://github.com/dhruvsuri789"
                     target="_blank"
                   >
@@ -138,11 +138,14 @@
                   <p>
                     As a freelancer, I've designed and built numerous websites
                     for clients, honing my skills in
-                    <strong>HTML, CSS, and JavaScript</strong>. I'm also
-                    well-versed in various website builders, including Webflow,
-                    Framer, Wix, Squarespace, and Shopify. Currently, I am
-                    immersing myself in the JavaScript framework ecosystem to
-                    further enhance my skills.
+                    <strong>HTML, CSS, and JavaScript</strong>. Currently, I am
+                    working as a <strong>front end developer</strong> and
+                    providing my expertise to clients in
+                    <strong>React and Next.js framework.</strong>
+                  </p>
+                  <p>
+                    I'm also well-versed in various website builders, including
+                    Webflow, Framer, Wix, Squarespace, and Shopify.
                   </p>
                   <p>
                     I am actively seeking a
@@ -166,6 +169,50 @@
               <div class="section_content">
                 <h2 class="heading-style-h3 text-align-center">Projects</h2>
                 <div class="projects_cards">
+                  <a href="https://homestay-ds.vercel.app/" target="_blank">
+                    <article class="projects_card projects_card--6">
+                      <div class="projects_card-content">
+                        <div class="projects_card-heading">
+                          <h3 class="heading-style-custom-1">Homestay</h3>
+                          <p>Web app for Homestay</p>
+                        </div>
+                        <ul class="projects_card-tags">
+                          <li class="projects_card-tag">React</li>
+                          <li class="projects_card-tag">Next.js</li>
+                          <li class="projects_card-tag">TailwindCSS</li>
+                          <li class="projects_card-tag">Cloudinary</li>
+                          <li class="projects_card-tag">MongoDB</li>
+                        </ul>
+                      </div>
+                      <img
+                        src="/images/img-airbnb.jpg"
+                        alt="Homestay web app"
+                        class="projects_card-img projects_card-img--6"
+                      />
+                    </article>
+                  </a>
+                  <a href="https://taskflow-sable.vercel.app/" target="_blank">
+                    <article class="projects_card projects_card--3">
+                      <div class="projects_card-content">
+                        <div class="projects_card-heading">
+                          <h3 class="heading-style-custom-1">Taskflow</h3>
+                          <p>Project Management Tool</p>
+                        </div>
+                        <ul class="projects_card-tags">
+                          <li class="projects_card-tag">React</li>
+                          <li class="projects_card-tag">Next.js</li>
+                          <li class="projects_card-tag">TailwindCSS</li>
+                          <li class="projects_card-tag">Clerk</li>
+                          <li class="projects_card-tag">Supabase</li>
+                        </ul>
+                      </div>
+                      <img
+                        src="/images/img-taskflow.png"
+                        alt="Taskflow web app"
+                        class="projects_card-img projects_card-img--3"
+                      />
+                    </article>
+                  </a>
                   <a href="https://icepops.webflow.io/" target="_blank">
                     <article class="projects_card projects_card--1">
                       <div class="projects_card-content">
@@ -301,6 +348,8 @@
                   <li class="skills_item">HTML</li>
                   <li class="skills_item">CSS</li>
                   <li class="skills_item">JavaScript</li>
+                  <li class="skills_item">React</li>
+                  <li class="skills_item">Next.js</li>
                   <li class="skills_item">SASS</li>
                   <li class="skills_item">Tailwind</li>
                   <li class="skills_item">Git</li>
@@ -344,7 +393,7 @@
                     <div class="experience_card-icon">
                       <ion-icon name="brush"></ion-icon>
                     </div>
-                    <div class="experience_card-year">2019 - 21</div>
+                    <div class="experience_card-year">2018 - 20</div>
                     <div class="experience_card-content">
                       <p class="text-weight-semibold">Freelancing</p>
                       <p class="text-color-tertiary">Chandigarh, India</p>
@@ -358,14 +407,14 @@
                     <div class="experience_card-icon">
                       <ion-icon name="browsers"></ion-icon>
                     </div>
-                    <div class="experience_card-year">2021 - &#8734;</div>
+                    <div class="experience_card-year">2020 - &#8734;</div>
                     <div class="experience_card-content">
                       <p class="text-weight-semibold">Web Development</p>
                       <p class="text-color-tertiary">Chandigarh, India</p>
                       <p>
                         Gained proficiency in web fundamentals such as HTML,
                         CSS, and JavaScript, alongside using website builders
-                        like Webflow, Squarespace, Wix etc.
+                        like Webflow, Framer, Squarespace, Wix etc.
                       </p>
                     </div>
                   </article>
@@ -373,13 +422,11 @@
                     <div class="experience_card-icon">
                       <ion-icon name="logo-react"></ion-icon>
                     </div>
-                    <div class="experience_card-year">2023 - &#8734;</div>
+                    <div class="experience_card-year">2021 - &#8734;</div>
                     <div class="experience_card-content">
                       <p class="text-weight-semibold">Current Focus</p>
                       <p class="text-color-tertiary">Chandigarh, India</p>
-                      <p>
-                        Delving into modern web development and learning React.
-                      </p>
+                      <p>Building my skills in React and Next.js framework.</p>
                     </div>
                   </article>
                 </div>
