--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                           <li class="projects_card-tag">TailwindCSS</li>
                           <li class="projects_card-tag">Clerk</li>
                           <li class="projects_card-tag">Supabase</li>
+                          <li class="projects_card-tag">Stripe</li>
                         </ul>
                       </div>
                       <img
