--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                   <p>
                     When I'm not coding, I enjoy watching movies, YouTube, and
                     anime, taking nature walks, and spending quality time with
-                    my family. As a foodie, I love experimenting with new
-                    recipes alongside my wife.
+                    my family.
                   </p>
                 </div>
               </div>
