Added Project Details

--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
                           <li class="projects_card-tag">React</li>
                           <li class="projects_card-tag">Next.js</li>
                           <li class="projects_card-tag">TailwindCSS</li>
+                          <li class="projects_card-tag">Next Auth</li>
                           <li class="projects_card-tag">Cloudinary</li>
                           <li class="projects_card-tag">MongoDB</li>
+                          <li class="projects_card-tag">Prisma</li>
                         </ul>
                       </div>
                       <img
@@ -203,6 +205,7 @@
                           <li class="projects_card-tag">TailwindCSS</li>
                           <li class="projects_card-tag">Clerk</li>
                           <li class="projects_card-tag">Supabase</li>
+                          <li class="projects_card-tag">Prisma</li>
                           <li class="projects_card-tag">Stripe</li>
                         </ul>
                       </div>
