--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                   <li class="skills_item">HTML</li>
                   <li class="skills_item">CSS</li>
                   <li class="skills_item">JavaScript</li>
+                  <li class="skills_item">TypeScript</li>
                   <li class="skills_item">React</li>
                   <li class="skills_item">Next.js</li>
                   <li class="skills_item">SASS</li>
