Update profile for Feb 2025

--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
               <div class="section_content">
                 <h2 class="heading-style-h3 text-align-center">Projects</h2>
                 <div class="projects_cards">
+                  <a href="https://bold-bakers-next.99dev.in/" target="_blank">
+                    <article class="projects_card projects_card--9">
+                      <div class="projects_card-content">
+                        <div class="projects_card-heading">
+                          <h3 class="heading-style-custom-1">Bold Baking</h3>
+                          <p>One place for all recipes</p>
+                        </div>
+                        <ul class="projects_card-tags">
+                          <li class="projects_card-tag">Next.js</li>
+                          <li class="projects_card-tag">Strapi</li>
+                          <li class="projects_card-tag">TailwindCSS</li>
+                        </ul>
+                      </div>
+                      <img
+                        src="/images/img-bold-baking.jpg"
+                        alt="Bold Baking"
+                        class="projects_card-img projects_card-img--6"
+                      />
+                    </article>
+                  </a>
                   <a href="https://homestay-ds.vercel.app/" target="_blank">
                     <article class="projects_card projects_card--7">
                       <div class="projects_card-content">
@@ -352,16 +372,22 @@
                   <li class="skills_item">CSS</li>
                   <li class="skills_item">JavaScript</li>
                   <li class="skills_item">TypeScript</li>
+                  <li class="skills_item">PHP</li>
                   <li class="skills_item">React</li>
                   <li class="skills_item">Next.js</li>
+                  <li class="skills_item">Astro</li>
                   <li class="skills_item">SASS</li>
                   <li class="skills_item">Tailwind</li>
+                  <li class="skills_item">Headless CMSs</li>
                   <li class="skills_item">Git</li>
+                  <li class="skills_item">Docker</li>
                   <li class="skills_item">Webflow</li>
                   <li class="skills_item">Framer</li>
                   <li class="skills_item">Wix</li>
                   <li class="skills_item">Squarespace</li>
                   <li class="skills_item">Shopify</li>
+                  <li class="skills_item">WordPress</li>
+                  <li class="skills_item">WooCommerce</li>
                   <li class="skills_item">Photoshop</li>
                   <li class="skills_item">Figma</li>
                   <li class="skills_item">Adobe XD</li>
@@ -489,7 +515,7 @@
           <div class="container-small">
             <div class="footer_content">
               <p class="text-size-small">
-                &#169; 2024 Dhruv. All rights reserved.
+                &#169; 2025 Dhruv Suri. All rights reserved.
               </p>
               <p class="text-size-small">
                 <strong>About this website:</strong> Built with HTML, CSS,
