--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <div class="section_content">
                 <h2 class="heading-style-h3 text-align-center">Projects</h2>
                 <div class="projects_cards">
-                  <a href="https://bold-bakers-next.99dev.in/" target="_blank">
+                  <!-- <a href="https://bold-bakers-next.99dev.in/" target="_blank">
                     <article class="projects_card projects_card--9">
                       <div class="projects_card-content">
                         <div class="projects_card-heading">
@@ -187,7 +187,7 @@
                         class="projects_card-img projects_card-img--6"
                       />
                     </article>
-                  </a>
+                  </a> -->
                   <a href="https://homestay-ds.vercel.app/" target="_blank">
                     <article class="projects_card projects_card--7">
                       <div class="projects_card-content">
