Added Wordpress and WooCommerce

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1 class="heading-style-h3">
                   <strong>Hello, I'm Dhruv.</strong> I'm a
                   <strong>web developer and designer</strong> with over
-                  <strong>5 years</strong> of experience. I enjoy building
+                  <strong>6 years</strong> of experience. I enjoy building
                   websites and solving my clients' problems.
                 </h1>
                 <div class="header_btn-wrapper">
@@ -99,13 +99,13 @@
                       class="icon-1x1-small"
                     ></ion-icon>
                   </a>
-                  <a
+                  <!-- <a
                     class="button is-bg-white is-icon"
                     href="https://github.com/dhruvsuri789"
                     target="_blank"
                   >
                     <ion-icon name="logo-github"></ion-icon>
-                  </a>
+                  </a> -->
                 </div>
                 <div class="spacer-xhuge">
                   <dotlottie-player
@@ -139,13 +139,13 @@
                     As a freelancer, I've designed and built numerous websites
                     for clients, honing my skills in
                     <strong>HTML, CSS, and JavaScript</strong>. Currently, I am
-                    working as a <strong>front end developer</strong> and
+                    focusing on <strong>front end development</strong> and
                     providing my expertise to clients in
                     <strong>React and Next.js framework.</strong>
                   </p>
                   <p>
                     I'm also well-versed in various website builders, including
-                    Webflow, Framer, Wix, Squarespace, and Shopify.
+                    <strong>Webflow, Framer, WordPress, WooCommerce.</strong>
                   </p>
                   <p>
                     I am actively seeking a
@@ -168,7 +168,45 @@
               <div class="section_content">
                 <h2 class="heading-style-h3 text-align-center">Projects</h2>
                 <div class="projects_cards">
-                  <!-- <a href="https://bold-bakers-next.99dev.in/" target="_blank">
+                  <a href="https://elmora.99dev.in/" target="_blank">
+                    <article class="projects_card projects_card--11">
+                      <div class="projects_card-content">
+                        <div class="projects_card-heading">
+                          <h3 class="heading-style-custom-1">Elmora</h3>
+                          <p>Furniture store</p>
+                        </div>
+                        <ul class="projects_card-tags">
+                          <li class="projects_card-tag">WordPress</li>
+                          <li class="projects_card-tag">WooCommerce</li>
+                        </ul>
+                      </div>
+                      <img
+                        src="/images/elmora.webp"
+                        alt="Bold Baking"
+                        class="projects_card-img projects_card-img--6"
+                      />
+                    </article>
+                  </a>
+                  <a href="https://kidzee.99dev.in/" target="_blank">
+                    <article class="projects_card projects_card--10">
+                      <div class="projects_card-content">
+                        <div class="projects_card-heading">
+                          <h3 class="heading-style-custom-1">Kidzee</h3>
+                          <p>Clothing store</p>
+                        </div>
+                        <ul class="projects_card-tags">
+                          <li class="projects_card-tag">WordPress</li>
+                          <li class="projects_card-tag">WooCommerce</li>
+                        </ul>
+                      </div>
+                      <img
+                        src="/images/kidzee.webp"
+                        alt="Bold Baking"
+                        class="projects_card-img projects_card-img--6"
+                      />
+                    </article>
+                  </a>
+                  <a href="https://bold-bakers.99dev.in/" target="_blank">
                     <article class="projects_card projects_card--9">
                       <div class="projects_card-content">
                         <div class="projects_card-heading">
@@ -187,7 +225,7 @@
                         class="projects_card-img projects_card-img--6"
                       />
                     </article>
-                  </a> -->
+                  </a>
                   <a href="https://homestay-ds.vercel.app/" target="_blank">
                     <article class="projects_card projects_card--7">
                       <div class="projects_card-content">
@@ -377,15 +415,15 @@
                   <li class="skills_item">Next.js</li>
                   <li class="skills_item">Astro</li>
                   <li class="skills_item">SASS</li>
-                  <li class="skills_item">Tailwind</li>
+                  <li class="skills_item">TailwindCSS</li>
                   <li class="skills_item">Headless CMSs</li>
                   <li class="skills_item">Git</li>
                   <li class="skills_item">Docker</li>
                   <li class="skills_item">Webflow</li>
                   <li class="skills_item">Framer</li>
-                  <li class="skills_item">Wix</li>
-                  <li class="skills_item">Squarespace</li>
-                  <li class="skills_item">Shopify</li>
+                  <!-- <li class="skills_item">Wix</li> -->
+                  <!-- <li class="skills_item">Squarespace</li> -->
+                  <!-- <li class="skills_item">Shopify</li> -->
                   <li class="skills_item">WordPress</li>
                   <li class="skills_item">WooCommerce</li>
                   <li class="skills_item">Photoshop</li>
@@ -444,7 +482,7 @@
                       <p>
                         Gained proficiency in web fundamentals such as HTML,
                         CSS, and JavaScript, alongside using website builders
-                        like Webflow, Framer, Squarespace, Wix etc.
+                        like Webflow, Framer, WordPress, WooCommerce etc.
                       </p>
                     </div>
                   </article>
